--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,4 @@ version = "0.1.0"
 [deps]
 SatisfiabilityInterface = "f4c7ffe1-8047-4e71-98df-f1c7b392bec0"
 SimpleSATSolver = "6385db5a-284d-4132-9acb-13e10b1cce04"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
