--- a/Project.toml
+++ b/Project.toml
@@ -7,3 +7,4 @@ version = "0.1.0"
 SatisfiabilityInterface = "f4c7ffe1-8047-4e71-98df-f1c7b392bec0"
 SimpleSATSolver = "6385db5a-284d-4132-9acb-13e10b1cce04"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
